date parsing exception and cascade exception for loan transaction issue fix